--- a/docs/app/docs/components/toast/page.mdx
+++ b/docs/app/docs/components/toast/page.mdx
@@ -3,234 +3,228 @@ title: Toast
 description: Showcase and usage guide of the toast component
 ---
 
-import ToastDefault, {Stack, ToastActions, ToastActionsNotification, ToastAlignment, ToastContent, ToastTimeout} from './_toast';
+import Provider, {alerting, ProviderAlign, ProviderVariant, SimpleToast, TestButton} from './_toast';
 import {Callout} from 'nextra/components';
-import {Table} from 'nextra/components';
 
 # Toast
 
 A toast component is a small, temporary popup message used to provide brief feedback or notifications to users in an
 unobtrusive manner.
 
-<ToastDefault/>
+<Provider>
+  <SimpleToast/>
+</Provider>
 
-<details>
-  <summary>Expand code</summary>
+## Provider
 
-  ```jsx
-  <Button variant={'outlined'} onClick={() => setOpen(true)}>Show toast</Button>
-
-  <Toast id={'simple-toast'} open={open} timeout={5000} closeCallback={() => {setOpen(false)}} alignment={{vertical: 'bottom', horizontal: 'left'}}>
-    Toast message
-  </Toast>
-  ```
-</details>
-
-## Timeout
-
-The `timeout` prop defines the duration (in ms) for which the toast will remain visible.
-
-<ToastTimeout/>
-
-<details>
-  <summary>Expand code</summary>
-
-  ```jsx
-  <Input
-    label={'Duration'}
-    variant={'basic'}
-    type={'number'}
-    min={0}
-    value={value}
-    onChange={(event) => setValue(Number(event.target.value))}
-    id={'timeout-duration'}
-  />
-
-  <Button variant={'outlined'} onClick={() => {setOpen(true)}}>
-    Show toast
-  </Button>
-
-  <Toast id={'toast-timer'} open={open} timeout={value} closeCallback={() => {setOpen(false)}} alignment={{vertical: 'bottom', horizontal: 'left'}}>
-    Timeout: {value}
-  </Toast>
-  ```
-</details>
-
-## Children
-
-In addition to default HTML, you can also use the [Notification](/docs/components/notification) component.
-
-<ToastContent/>
-
-<details>
-  <summary>Expand code</summary>
-
-  ```jsx
-  <Button variant={'outlined'} onClick={() => setOpen(true)}>Show toast</Button>
-
-  <Toast id={'toast-content'} open={open} timeout={5000} alignment={{vertical: 'bottom', horizontal: 'left'}} closeCallback={() => {setOpen(false)}}>
-    <Notification type={'success'} variant={'filled'}>Success notification</Notification>
-  </Toast>
-  ```
-</details>
-
-## Alignment
-
-Use the `alignment` prop to override the default vertical (bottom) and horizontal (left) positioning of the toast.
-
-<ToastAlignment/>
-
-<details>
-  <summary>Expand code</summary>
-
-  ```jsx
-  <span>Vertical alignment</span>
-  <RadioGroup
-    direction={'row'}
-    name={'vertical'}
-    selected={vertical}
-    options={[{label: 'top', value: 'top'}, {label: 'center', value: 'center'}, {label: 'bottom', value: 'bottom'}]}
-    onChange={(event) => setVertical(event.target.value)}
-  />
-
-  <span>Horizontal alignment</span>
-  <RadioGroup
-    direction={'row'}
-    name={'horizontal'}
-    selected={horizontal}
-    options={[{label: 'left', value: 'left'}, {label: 'center', value: 'center'}, {label: 'right', value: 'right'}]}
-    onChange={(event) => setHorizontal(event.target.value)}
-  />
-
-  <Button variant={'outlined'} onClick={() => {setOpen(true)}}>
-    Show toast
-  </Button>
-
-  <Toast id={'toast-timer'} open={open} timeout={3000} closeCallback={() => {setOpen(false)}} alignment={{vertical: vertical, horizontal: horizontal}}>
-    Toast with custom position
-  </Toast>
-  ```
-</details>
+The `ToastProvider` serves as a wrapper container for displaying toasts. It allows you to configure global settings
+that apply to all toasts, unless overridden by individual toast-specific options. Additionally, it allows you to control
+the on-screen positioning of the toasts.
 
 <Callout type={'info'}>
-  If you use the `ToastProvider` and set the alignment to bottom, the newest toast will be at the top of the stack.
+  The provider should ideally be set at the root level. However, for the sake of simplicity, it is currently wrapping only the specific showcase content.
 </Callout>
 
-## CloseCallback
+### Alignment
 
-The `closeCallabck` function will run after the set timeout. You can use this to reset the `open` state afterwards. 
+Use the `alignment` prop to override the default vertical (bottom) and horizontal (left) positioning.
 
-## Actions
-
-The `action` prop allows you to add additional user interactivity, such as including a close button.
-
-<ToastActions/>
+<ProviderAlign>
+  <SimpleToast/>
+</ProviderAlign>
 
 <details>
   <summary>Expand code</summary>
 
-  ```jsx
-  <Button variant={'outlined'} onClick={() => setOpen(true)}>Show toast</Button>
-
-  <Toast
-    id={'toast-action'}
-    open={open}
-    timeout={5000}
-    closeCallback={() => {setOpen(false)}}
-    alignment={{vertical: 'bottom', horizontal: 'left'}}
-    action={<Button color={'success'} variant={'text'} size={'small'} onClick={() => {setOpen(false)}}>Close</Button>}
-  >
-    Wait for the timeout or close with the close button
-  </Toast>
+  ```tsx
+  <ToastProvider alignment={{vertical: 'top', horizontal: 'right'}}>...</ToastProvider>
   ```
 </details>
 
-<Callout type={'info'}>
-  When using the `Notification` component, you can instead utilize the `action` or `onClose` props for additional functionality.
+<Callout>
+  Vertical options are `top`, `center` & `bottom` and horizontal options are `left`, `center` & `right`. \
+  If the vertical alignment is set to `bottom`, the newest toast will be at the top instead of at the bottom of the stack.
 </Callout>
 
-<ToastActionsNotification/>
+### Global toast options
+
+These options apply to all toasts, unless overridden by individual toast options. 
+
+#### Dark
+
+This option allows you to apply the dark-mode setting to all toasts, eliminating the need to configure it individually for each toast. \
+By default the global option is set to `false`.
+
+```tsx
+<ToastProvider dark={true}>
+  ...
+</ToastProvider>
+```
+
+#### Dismissible
+
+Use this option to add a close button. Clicking on the close button will also trigger the `closeCallback` function if
+it is provided. \
+By default the global option is set to `false`.
+
+```tsx
+<ToastProvider dismissible={true}>
+  ...
+</ToastProvider>
+```
+
+#### Limit
+
+The `limit` option overrides the default (4) limit of active toasts on screen. \
+If the limit is reached, the oldest toast will be removed.
+
+```tsx
+<ToastProvider limit={5}>
+  ...
+</ToastProvider>
+```
+
+#### Timeout
+
+The `timeout` specifies when a toast should disappear. Use `persistent` to prevent toasts from disappearing. \
+By default the global option is set to `5000`.
+
+```tsx
+// set the timeout in ms or use 'persistent' to disable the timeout
+<ToastProvider timeout={3000}>
+  ...
+</ToastProvider>
+```
+
+<Callout type={'warning'}>
+  If a toast is persistent, make sure to either use the `dismissible` prop or add your own `action` to allow users to close the toast.
+</Callout>
+
+## Adding toasts
+
+To add toasts you need to use the `queueToast` function. \
+Individual toast options will be preferred over the global options.
+
+```tsx
+const {queueToast} = useToastContext();
+
+queueToast('toast message', {timeout: 3000}); // optionally add toast options
+```
+
+The function returns the toast's ID, which is required for removing it programmatically.
+
+## Removing toasts
+
+To remove toasts programmatically use the `closeToast` function. \
+If you do not provide an ID, every currently active toast will be removed.
+
+```tsx
+const {closeToast} = useToastContext();
+
+closeToast('foo'); // ID returned from queueToast func
+closeToast(); // remove every active toast
+```
+
+## Toast options
+
+Toast options allow you to customize the appearance and behaviour of a toast.
+
+### Action
+
+Add custom actions to the toast.
+
+<Provider>
+  <SimpleToast options={{action: <TestButton/>}}/>
+</Provider>
 
 <details>
   <summary>Expand code</summary>
 
-  ```jsx
-  <Button variant={'outlined'} onClick={() => setOpen(true)}>Show toast</Button>
-
-  <Toast id={'notify-toast'} open={open} timeout={5000} closeCallback={() => {setOpen(false)}} alignment={{vertical: 'bottom', horizontal: 'left'}}>
-    <Notification type={'success'} variant={'filled'} onClose={() => {setOpen(false)}}>
-      Wait for the timeout or close with the close button
-    </Notification>
-  </Toast>
+  ```tsx
+  queueToast('Toast notification', {action: <Button variant={'text'} dark={dark} onClick={() => closeToast()}>Close</Button>});
   ```
 </details>
 
-## Stack
+### CloseCallback
 
-The `ToastProvider` component enables stacking multiple toasts on top of each other. For detailed usage instructions,
-refer to the [ToastProvider](/docs/components/toast-provider) documentation.
+Callback function that runs after the toast closes automatically or after clicking the close button.
 
-<Stack/>
+<Provider>
+  <SimpleToast options={{closeCallback: alerting}}/>
+</Provider>
 
-## Props
+<details>
+  <summary>Expand code</summary>
 
-<Table style={{marginTop: '2rem'}}>
-  <thead>
-  <Table.Tr>
-    <Table.Th>Name</Table.Th>
-    <Table.Th>Type</Table.Th>
-    <Table.Th>Default</Table.Th>
-    <Table.Th>Description</Table.Th>
-  </Table.Tr>
-  </thead>
-  <tbody>
-  <Table.Tr>
-    <Table.Td>action</Table.Td>
-    <Table.Td>`node`</Table.Td>
-    <Table.Td>-</Table.Td>
-    <Table.Td>add custom actions to the component</Table.Td>
-  </Table.Tr>
-  <Table.Tr>
-    <Table.Td>alignment</Table.Td>
-    <Table.Td>`{vertical: 'top' | 'center' | 'bottom', horizontal: 'left' | 'center' | 'right'}`</Table.Td>
-    <Table.Td><b>vertical: 'bottom', horizontal: 'left'</b></Table.Td>
-    <Table.Td>set the position of the component</Table.Td>
-  </Table.Tr>
-  <Table.Tr>
-    <Table.Td>children</Table.Td>
-    <Table.Td>`node`</Table.Td>
-    <Table.Td>-</Table.Td>
-    <Table.Td>Content of the component</Table.Td>
-  </Table.Tr>
-  <Table.Tr>
-    <Table.Td>closeCallback</Table.Td>
-    <Table.Td>`func`</Table.Td>
-    <Table.Td>-</Table.Td>
-    <Table.Td>Callback function that runs after the component timeout</Table.Td>
-  </Table.Tr>
-  <Table.Tr>
-    <Table.Td>dark</Table.Td>
-    <Table.Td>`boolean`</Table.Td>
-    <Table.Td><b>false</b></Table.Td>
-    <Table.Td>Use the darkmode style</Table.Td>
-  </Table.Tr>
-  <Table.Tr>
-    <Table.Td>id</Table.Td>
-    <Table.Td>`string`</Table.Td>
-    <Table.Td>-</Table.Td>
-    <Table.Td>Unique identifier for the component</Table.Td>
-  </Table.Tr>
-  <Table.Tr>
-    <Table.Td>open</Table.Td>
-    <Table.Td>`boolean`</Table.Td>
-    <Table.Td>-</Table.Td>
-    <Table.Td>Set the visibility of the component</Table.Td>
-  </Table.Tr>
-  <Table.Tr>
-    <Table.Td>timeout</Table.Td>
-    <Table.Td>`number`</Table.Td>
-    <Table.Td>-</Table.Td>
-    <Table.Td>Set the timeout of the component</Table.Td>
-  </Table.Tr>
-  </tbody>
-</Table>
+  ```ts
+  queueToast('Toast notification', {{closeCallback: callbackFunc()}});
+  ```
+</details>
+
+### Dark
+
+Apply the dark-mode setting.
+
+<Provider>
+  <SimpleToast options={{dark: true}}/>
+</Provider>
+
+<details>
+  <summary>Expand code</summary>
+
+  ```ts
+  queueToast('Toast notification', {dark: true});
+  ```
+</details>
+
+### Dismissible
+
+Use this option to add a close button. Clicking on the close button will also trigger the `closeCallback` function if
+it is provided.
+
+<Provider>
+  <SimpleToast options={{dismissible: true}}/>
+</Provider>
+
+<details>
+  <summary>Expand code</summary>
+
+  ```ts
+  queueToast('Toast notification', {dismissible: true});
+  ```
+</details>
+
+### Timeout
+
+The `timeout` specifies when a toast should disappear. Use `persistent` to prevent toasts from disappearing.
+
+<Provider>
+  <SimpleToast options={{timeout: 'persistent', dismissible: true}}/>
+</Provider>
+
+<details>
+  <summary>Expand code</summary>
+
+  ```ts
+  queueToast('Toast notification', {timeout: 'persistent', dismissible: true});
+  ```
+</details>
+
+### Variant
+
+Set the style of the toast. Use one of `info`, `success`, `warning` or `error`. \
+Not setting this option will render a default styled toast.
+
+<ProviderVariant/>
+
+<details>
+  <summary>Expand code</summary>
+
+  ```ts
+  queueToast('Default toast');
+  queueToast('Info toast', {variant: 'info'});
+  queueToast('Success toast', {variant: 'success'});
+  queueToast('Warning toast', {variant: 'warning'});
+  queueToast('Error toast', {variant: 'error'});
+  ```
+</details>
