--- a/docs/app/docs/components/button/page.mdx
+++ b/docs/app/docs/components/button/page.mdx
@@ -109,21 +109,21 @@ Each button variant offers predefined color options, along with the ability to s
   <summary>Expand code</summary>
 
   ```jsx
-  <Button variant={'filled'}>Filled</Button>
+  <Button variant={'filled'} color={'info'}>Info</Button>
   <Button variant={'filled'} color={'success'}>Success</Button>
   <Button variant={'filled'} color={'warning'}>Warning</Button>
   <Button variant={'filled'} color={'error'}>Error</Button>
   <Button variant={'filled'} color={'#37edde'}>Custom</Button>
   <Button variant={'filled'} color={'#9437ed'}>Custom</Button>
       
-  <Button variant={'outlined'}>Outlined</Button>
+  <Button variant={'outlined'}>Info</Button> // You can omit the color option if you want to use info
   <Button variant={'outlined'} color={'success'}>Success</Button>
   <Button variant={'outlined'} color={'warning'}>Warning</Button>
   <Button variant={'outlined'} color={'error'}>Error</Button>
   <Button variant={'outlined'} color={'#37edde'}>Custom</Button>
   <Button variant={'outlined'} color={'#9437ed'}>Custom</Button>
 
-  <Button variant={'text'}>Text</Button>
+  <Button variant={'text'}>Info</Button>
   <Button variant={'text'} color={'success'}>Success</Button>
   <Button variant={'text'} color={'warning'}>Warning</Button>
   <Button variant={'text'} color={'error'}>Error</Button>
@@ -131,6 +131,8 @@ Each button variant offers predefined color options, along with the ability to s
   <Button variant={'text'} color={'#9437ed'}>Custom</Button>
   ```
 </details>
+
+The default color option is `info`.
 
 The font color of filled buttons with a custom color is determined based on the contrast ratio, ensuring optimal
 readability by dynamically selecting either black or white. This functionality is implemented using the custom hook
@@ -160,8 +162,8 @@ readability by dynamically selecting either black or white. This functionality i
   </Table.Tr>
   <Table.Tr>
     <Table.Td>color</Table.Td>
-    <Table.Td>`success` | `warning` | `error` | `string`</Table.Td>
-    <Table.Td>-</Table.Td>
+    <Table.Td>`info` | `success` | `warning` | `error` | `string`</Table.Td>
+    <Table.Td><b>info</b></Table.Td>
     <Table.Td>
       <p>Color of the button</p>
       <p>⚠️ If you use a custom color make sure it is a valid HEX value.</p>
