--- a/docs/app/docs/components/tag/page.mdx
+++ b/docs/app/docs/components/tag/page.mdx
@@ -3,8 +3,15 @@ title: Tag
 description: Showcase and usage guide of the tag component
 ---
 
-import Tags from './_tag';
+import Tags, {TagSize} from './_tag';
 
 # Tag
 
 <Tags/>
+
+
+## Size
+
+The tag component comes in three different sizes: `small`, `medium` and `large`.
+
+<TagSize/>
