removes unnecessary prop from example code

--- a/docs/app/docs/components/toast/page.mdx
+++ b/docs/app/docs/components/toast/page.mdx
@@ -141,7 +141,7 @@ Add custom actions to the toast.
   <summary>Expand code</summary>
 
   ```tsx
-  queueToast('Toast notification', {action: <Button variant={'text'} dark={dark} onClick={() => closeToast()}>Close</Button>});
+  queueToast('Toast notification', {action: <Button variant={'text'} onClick={() => closeToast()}>Close</Button>});
   ```
 </details>
 
