--- a/docs/app/docs/components/checkbox/page.mdx
+++ b/docs/app/docs/components/checkbox/page.mdx
@@ -4,8 +4,7 @@ description: Showcase and usage guide of the checkbox component
 ---
 
 import DefaultCheck, {ChecksColored, ChecksContent} from './_checkbox';
-import {Callout} from 'nextra/components';
-import {Table} from 'nextra/components';
+import {Callout, Table} from 'nextra/components';
 
 # Checkbox
 
