--- a/docs/app/docs/components/dialog-content/page.mdx
+++ b/docs/app/docs/components/dialog-content/page.mdx
@@ -4,8 +4,7 @@ description: Showcase and usage guide of the dialog-content component
 ---
 
 import Content, {DialogContentBasic, DialogDivider, DialogAC} from './_dialogContent';
-import {Callout} from 'nextra/components';
-import {Table} from 'nextra/components';
+import {Callout, Table} from 'nextra/components';
 
 # DialogContent
 
