--- a/docs/app/docs/components/dialog-controls/page.mdx
+++ b/docs/app/docs/components/dialog-controls/page.mdx
@@ -5,8 +5,7 @@ description: Showcase and usage guide of the dialog-controls component
 
 import Controls, {DialogControlsBasic, DialogPos} from './_dialogControls';
 import styles from '@/styles/styles.module.scss';
-import {Callout} from 'nextra/components';
-import {Table} from 'nextra/components';
+import {Callout, Table} from 'nextra/components';
 
 # DialogControls
 
