--- a/docs/app/docs/components/dialog-title/page.mdx
+++ b/docs/app/docs/components/dialog-title/page.mdx
@@ -5,8 +5,7 @@ description: Showcase and usage guide of the dialog-title component
 
 import Title, {DialogAC, DialogTitleBasic, DialogTitleColor} from './_dialogTitle';
 import styles from '@/styles/styles.module.scss';
-import {Callout} from 'nextra/components';
-import {Table} from 'nextra/components';
+import {Callout, Table} from 'nextra/components';
 
 # DialogTitle
 
