--- a/docs/app/docs/components/dialog/page.mdx
+++ b/docs/app/docs/components/dialog/page.mdx
@@ -4,8 +4,7 @@ description: Showcase and usage guide of the dialog component
 ---
 
 import DefaultDialog, {DialogAlert, DialogESC, DialogScroll, DialogSize} from './_dialog';
-import {Callout} from 'nextra/components';
-import {Table} from 'nextra/components';
+import {Callout, Table} from 'nextra/components';
 
 # Dialog
 
