--- a/docs/app/docs/components/input-decorator/page.mdx
+++ b/docs/app/docs/components/input-decorator/page.mdx
@@ -5,8 +5,7 @@ description: Showcase and usage guide of the input-decorator component
 
 import Deco, {DecoContent, DecoHidden, DecoPosition} from './_decorator';
 import {InputDeco} from '../input/_input';
-import {Callout} from 'nextra/components';
-import {Table} from 'nextra/components';
+import {Callout, Table} from 'nextra/components';
 
 # InputDecorator
 
