--- a/docs/app/docs/components/input/page.mdx
+++ b/docs/app/docs/components/input/page.mdx
@@ -4,8 +4,7 @@ description: Showcase and usage guide of the input component
 ---
 
 import InputVariants, {InputAttributes, InputDeco, InputError, InputHelp, InputHelpEmpty} from './_input.tsx';
-import {Callout} from 'nextra/components';
-import {Table} from 'nextra/components';
+import {Callout, Table} from 'nextra/components';
 
 # Input
 
