--- a/docs/app/docs/components/radio-group/page.mdx
+++ b/docs/app/docs/components/radio-group/page.mdx
@@ -4,8 +4,7 @@ description: Showcase and usage guide of the radio-group component
 ---
 
 import DefaultRadio, {GroupColor, GroupDirection, GroupInactive} from './_radioGroup';
-import {Callout} from 'nextra/components';
-import {Table} from 'nextra/components';
+import {Callout, Table} from 'nextra/components';
 
 # RadioGroup
 
