--- a/docs/app/docs/components/radio/page.mdx
+++ b/docs/app/docs/components/radio/page.mdx
@@ -4,8 +4,7 @@ description: Showcase and usage guide of the radio component
 ---
 
 import DefaultRadio, {RadioColor, RadioContent} from './_radio';
-import {Callout} from 'nextra/components';
-import {Table} from 'nextra/components';
+import {Callout, Table} from 'nextra/components';
 
 # Radio
 
