--- a/docs/app/docs/components/button/page.mdx
+++ b/docs/app/docs/components/button/page.mdx
@@ -4,8 +4,7 @@ description: Showcase and usage guide of the button component
 ---
 
 import DefaultButtons, {Buttons, ButtonSizes, ColorButtons} from './_buttons';
-import {Callout} from 'nextra/components';
-import {Table} from 'nextra/components';
+import {Callout, Table} from 'nextra/components';
 
 # Button
 
