updates components overview

--- a/docs/app/docs/components/page.mdx
+++ b/docs/app/docs/components/page.mdx
@@ -28,6 +28,11 @@ View all available components and learn how to use them.
     title="InputDecorator"
     href="/docs/components/input-decorator"
   />
+
+  <Cards.Card
+    title="Textarea"
+    href="/docs/components/textarea"
+  />
   
   <Cards.Card
     title="Checkbox"
@@ -37,6 +42,11 @@ View all available components and learn how to use them.
   <Cards.Card
     title="Radio"
     href="/docs/components/radio"
+  />
+
+  <Cards.Card
+    title="RadioGroup"
+    href="/docs/components/radio-group"
   />
 </Cards>
 
@@ -66,5 +76,19 @@ View all available components and learn how to use them.
   <Cards.Card
     title="Toast"
     href="/docs/components/toast"
+  />
+
+  <Cards.Card
+    title="Progress"
+    href="/docs/components/progress"
+  />
+</Cards>
+
+## Data Display
+
+<Cards>
+  <Cards.Card
+    title="Tag"
+    href="/docs/components/tag"
   />
 </Cards>
