adds skeleton component docs

--- a/docs/app/docs/components/page.mdx
+++ b/docs/app/docs/components/page.mdx
@@ -82,6 +82,11 @@ View all available components and learn how to use them.
     title="Progress"
     href="/docs/components/progress"
   />
+
+  <Cards.Card
+    title="Skeleton"
+    href="/docs/components/skeleton"
+  />
 </Cards>
 
 ## Data Display
