adds switch documentation

--- a/docs/app/docs/components/page.mdx
+++ b/docs/app/docs/components/page.mdx
@@ -38,6 +38,11 @@ View all available components and learn how to use them.
     title="Checkbox"
     href="/docs/components/checkbox"
   />
+
+  <Cards.Card
+    title="Switch"
+    href="/docs/components/switch"
+  />
   
   <Cards.Card
     title="Radio"
