refactoring to use font awesome icons

--- a/docs/app/about/page.mdx
+++ b/docs/app/about/page.mdx
@@ -1,9 +1,9 @@
 # About UI-Library
 
-This library comprises a set of reusable UI components designed for React-based applications. \
+This library comprises a set of reusable UI components designed for React-based applications.  
 Originally it was designed for personal projects, but you are welcome to integrate it into your projects as needed.
 
-If you have any suggestions or feedback feel free to open an issue over at [GitHub](https://github.com/HenrikBuesing/ui-library/issues)
+If you have any suggestions or feedback feel free to open an issue over at [GitHub](https://github.com/HenrikBuesing/ui-library/issues).
 
 ## Maintainers
 
@@ -11,4 +11,13 @@ Currently, the project is maintained and developed by Henrik Büsing.
 
 ## License
 
-The project is licensed under [the MIT license](https://github.com/HenrikBuesing/ui-library/main/LICENSE).
+The project is licensed under the [MIT license](https://github.com/HenrikBuesing/ui-library/main/LICENSE).
+
+## Attribution
+
+Some components use icons developed by the [Font Awesome team](https://fontawesome.com),
+which are licensed under the [Font Awesome Free license](https://fontawesome.com/license/free).  
+If you haven't already, be sure to check out their extensive collection of high-quality icons.
+
+This package does not rely on Font Awesome's npm packages (e.g., `@fortawesome/fontawesome-svg-core`) in order
+to minimize dependencies. Instead, it incorporates the SVG code of the respective icons.
