--- a/docs/app/docs/components/tag/page.mdx
+++ b/docs/app/docs/components/tag/page.mdx
@@ -156,7 +156,12 @@ Use the `onDelete` prop to clear filter options or remove the tag from a selecti
   ```
 </details>
 
-you can use third-party icon components such as [fontawesome icons](https://fontawesome.com) to customize the delete icon.
+<Callout type={'info'}>
+  By default, if the `onDelete` prop is provided, a fallback icon will be rendered.  
+  The icon is designed by the [fontawesome team](https://fontawesome.com).
+</Callout>
+
+To customize the icon, use the `deleteIcon` prop.
 
 ## Link
 
