--- a/docs/app/docs/components/page.mdx
+++ b/docs/app/docs/components/page.mdx
@@ -98,6 +98,11 @@ View all available components and learn how to use them.
 
 <Cards>
   <Cards.Card
+    title="Details"
+    href="/docs/components/details"
+  />
+
+  <Cards.Card
     title="Tag"
     href="/docs/components/tag"
   />
